deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs
spec:
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      containers:
      - name: nodejs
        image: myregistryaksnqt.azurecr.io/nodejs:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8081
      volumes:
      - name: azure
        azureDisk:
          kind: Managed
          diskName: aksdisk
          diskURI: /subscriptions/809dc5c8-eb18-4a5d-997c-4b1cb28598f4/resourceGroups/Jenkins/providers/Microsoft.Compute/disks/aksdisk
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs
spec:
  type: LoadBalancer
  selector:
    app: nodejs
  ports:
  - port: 80
    targetPort: 8081
